[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entities/Car.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Car.png" type="Texture" id=2]
[ext_resource path="res://Entities/Player.gd" type="Script" id=3]
[ext_resource path="res://Assets/ImpactSFX.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Arrow.png" type="Texture" id=5]
[ext_resource path="res://Effects/Collision.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Alarm.ogg" type="AudioStream" id=7]

[node name="Player" instance=ExtResource( 1 )]
collision/safe_margin = 0.001
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="." index="0"]
current = true

[node name="Flames" parent="." index="2" instance=ExtResource( 6 )]
position = Vector2( -34.565, 9.13787 )
one_shot = false
collision = false

[node name="Flames2" parent="." index="3" instance=ExtResource( 6 )]
position = Vector2( -34.565, -9.138 )
one_shot = false
collision = false

[node name="Body" parent="." index="4"]
position = Vector2( -0.500565, -0.166847 )
scale = Vector2( 0.0727349, 0.0720831 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" parent="." index="5"]
position = Vector2( -0.264862, 0 )
polygon = PoolVector2Array( -35.3281, 12.7114, -25, 16.7743, 3.75, 16.0243, 25.75, 16.7743, 33.6773, 12.6311, 36.5908, 7.86349, 38.5, 1.0243, 37.6503, -6.30683, 33.5448, -13.1933, 24.25, -16.9757, 0, -16.2257, -26, -16.9757, -35.1704, -13.0936, -36.2215, -10.0979, -36.7471, -1.74149, -36.3792, 9.40038 )

[node name="TurboTimer" type="Timer" parent="." index="6"]
wait_time = 5.0
one_shot = true

[node name="ShakeTimer" type="Timer" parent="." index="7"]
wait_time = 0.5
one_shot = true

[node name="Impact" type="AudioStreamPlayer2D" parent="." index="8"]
stream = ExtResource( 4 )
volume_db = -5.0
pitch_scale = 0.5

[node name="Arrow" type="Sprite" parent="." index="10"]
position = Vector2( -0.512268, 0.0226135 )
rotation = -1.5708
scale = Vector2( 0.0949972, 0.0949972 )
texture = ExtResource( 5 )
offset = Vector2( -3.78888, 584.151 )

[node name="FuelTimer" type="Timer" parent="." index="11"]
wait_time = 0.09
autostart = true

[node name="Alarm" type="AudioStreamPlayer" parent="." index="12"]
stream = ExtResource( 7 )
volume_db = -15.0

[connection signal="timeout" from="TurboTimer" to="." method="_on_TurboTimer_timeout"]
[connection signal="timeout" from="ShakeTimer" to="." method="_on_ShakeTimer_timeout"]
[connection signal="timeout" from="FuelTimer" to="." method="_on_FuelTimer_timeout"]
